--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,9 @@
         
         <div class="input-container">
             <label for="From">From</label>
-            <input type="text" id="From" name="From" placeholder="Enter From Date">
+            <input type="date" id="From" name="From" placeholder="Enter From Date">
             <label for="TO">To</label>
-            <input type="text" id="TO" name="TO" placeholder="Enter TO Date">
+            <input type="date" id="TO" name="TO" placeholder="Enter TO Date">
         </div>
         <br>
         <label for="Reason">Reason</label>
